==> finani/ICM42688/src/ICM42688.cpp <==
#include "ICM42688.h"
#include "registers.h"

int ICM42688::writeRegister(uint8_t subAddress, uint8_t data) {
	/* write data to device */
	if (_useSPI) {
		_spi->beginTransaction(SPISettings(SPI_LS_CLOCK, MSBFIRST, SPI_MODE3));  // begin the transaction
		digitalWrite(_csPin, LOW);                                               // select the ICM42688 chip
		_spi->transfer(subAddress);                                              // write the register address
		_spi->transfer(data);                                                    // write the data
		digitalWrite(_csPin, HIGH);                                              // deselect the ICM42688 chip
		_spi->endTransaction();                                                  // end the transaction
	} else {
		_i2c->beginTransmission(_address);                                       // open the device
		_i2c->write(subAddress);                                                 // write the register address
		_i2c->write(data);                                                       // write the data
		_i2c->endTransmission();
	}

	delay(10);

	/* read back the register */
	readRegisters(subAddress, 1, _buffer);
	/* check the read back register against the written register */
	if (_buffer[0] == data) {
		return 1;
	} else {
		return -1;
	}
}

int ICM42688::readRegisters(uint8_t subAddress, uint8_t count, uint8_t* dest) {
	if (_useSPI) {
		// begin the transaction
		if (_useSPIHS) {
			_spi->beginTransaction(SPISettings(_spi_hs_clock, MSBFIRST, SPI_MODE3));
		} else {
			_spi->beginTransaction(SPISettings(SPI_LS_CLOCK, MSBFIRST, SPI_MODE3));
		}
		digitalWrite(_csPin, LOW);                       // select the ICM42688 chip
		_spi->transfer(subAddress | 0x80);               // specify the starting register address
		for (uint8_t i = 0; i < count; i++) {
			dest[i] = _spi->transfer(0x00);                // read the data
		}
		digitalWrite(_csPin, HIGH);                      // deselect the ICM42688 chip
		_spi->endTransaction();                          // end the transaction
		return 1;
	} else {
		_i2c->beginTransmission(_address);               // open the device
		_i2c->write(subAddress);                         // specify the starting register address
		_i2c->endTransmission(false);
		_numBytes = _i2c->requestFrom(_address, count);  // specify the number of bytes to receive
		if (_numBytes == count) {
			for (uint8_t i = 0; i < count; i++) {
				dest[i] = _i2c->read();
			}
			return 1;
		} else {
			return -1;
		}
	}
}
